# SpeakerTracker-Tauri

./: README.md  clock.html  eslint.config.ts  index.html  info.html  note.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/: content.ts  main_old.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/01-Use cases/01-Track speakers/: meetingsetup-presenter.ts  meetingsetup-view.ts  speakers-presenter.ts  speakers-view.ts
src/01-Use cases/02-Setup/: setup-view.ts
src/01-Use cases/02-Setup/01-Master/DisplayEntities/: display-entities-presenter.ts
src/01-Use cases/02-Setup/01-Master/DisplayEvents/: display-events-presenter.ts  display-events-view.ts
src/01-Use cases/02-Setup/01-Master/DisplayMeetingGroups/: display-groups-presenter.ts  display-groups-view.ts
src/01-Use cases/02-Setup/01-Master/DisplayMembers/: display-members-presenter.ts  display-members-view.ts
src/01-Use cases/02-Setup/02-Detail/DisplaySelectedEntity/: display-selected-entity-view.ts
src/01-Use cases/02-Setup/02-Detail/DisplaySelectedEvent/: display-selected-event-view.ts
src/01-Use cases/02-Setup/02-Detail/DisplaySelectedGroup/: display-selected-group-view.ts
src/01-Use cases/03-Reports/: reports-presenter.ts  reports-view.ts
src/02-Models/: models.ts
src/03-State/: state.ts
src/css/: dark.css  main.css  setup.css  speakers.css
src/types/: functions.d.ts  functions.d_old.ts  index.d.ts  interfaces.d.ts
(+13 files in other folders)
